# ssstl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Linux.yml  Ubuntu.yml  Windows.yml  appleclang.yml  blank.yml  clang.yml  emscripten.yml  gcc.yml  msvc.yml
cmake/: CheckCXXStandardSupport.cmake  CheckCXX_CFloatSymbolExists.cmake  CheckCXX_CMathSymbolExists.cmake  CheckCXX_InitializerListExists.cmake  CheckCXX_TypeExists.cmake  CheckTypeExists.cmake  Configuration.cmake
include/lsd/: __attribute.h  __deprecated.h  __nullptr_t.h  __size_t.h  algorithm.h  array.h  compare.h  compressed_pair.h  concepts.h  core.h  exception.h  expected.h  functional.h  initializer_list.h  istream.h  iterator.h  limits.h  locale.h  memory.h  optional.h  ostream.h  ranges.h  span.h  stdexcept.h  string.h  string_view.h  tuple.h  type_traits.h  utility.h  variant.h  vector.h  version.h
include/lsd/__algorithm/: clamp.h  for_each_n.h  shift.h  swap.h
include/lsd/__array/: to_array.h
include/lsd/__compare/: three_way_comparable.h
include/lsd/__concepts/: assignable_from.h  boolean_testable.h  common_reference_with.h  common_with.h  comparison_common_type_with.h  constructible_from.h  convertible_to.h  copy_constructible.h  copyable.h  default_initializable.h  dereferenceable.h  derived_from.h  derived_from_single_crtp.h  destructible.h  different_from.h  equality_comparable.h  equivalence_relation.h  floating_point.h  implicit_expression_check.h  invocable.h  movable.h  move_constructible.h  partially_ordered_with.h  predicate.h  regular.h  relation.h  same_as.h  semiregular.h  signed_integral.h  strict_weak_order.h  subtractable.h  swap.h  swappable.h  swappable_with.h  totally_ordered.h  unsigned_integral.h  value_swappable.h  weakly_equality_comparable_with.h
include/lsd/__core/: assert.h  byte.h  constexpr.h  decay_copy.h  inline_or_static.h  inline_variable.h  macro.h  no_unique_address.h  nodiscard.h  std_version.h
include/lsd/__expected/: bad_expected_access.h  expected.h  monadic.h  unexpect.h  unexpected.h
include/lsd/__functional/: bind_back.h  bind_front.h  equal_to.h  greater.h  greater_equal.h  hash.h  hash_array.h  identity.h  invoke.h  less.h  less_equal.h  not_equal_to.h
include/lsd/__iterator/: advance.h  basic_const_iterator.h  bidirectional_iterator.h  common_iterator.h  contiguous_iterator.h  counted_iterator.h  default_sentinel_t.h  forward_iterator.h  incrementable.h  incrementable_traits.h  indirect_binary_predicate.h  indirect_equivalence_relation.h  indirect_result_t.h  indirect_strict_weak_order.h  indirect_unary_predicate.h  indirectly_comparable.h  indirectly_copyable.h  indirectly_copyable_storable.h  indirectly_movable.h  indirectly_movable_storable.h  indirectly_readable.h  indirectly_readable_traits.h  indirectly_regular_unary_invocable.h  indirectly_swappable.h  indirectly_unary_invocable.h  indirectly_writable.h  input_iterator.h  input_or_output_iterator.h  iter_common_reference_t.h  iter_const_reference_t.h  iter_difference_t.h  iter_key_t.h  iter_mapped_t.h  iter_move.h  iter_reference_t.h  iter_rvalue_reference_t.h  iter_swap.h  iter_val_t.h  iter_value_t.h  iterator_tag.h  (+16 more)
include/lsd/__memory/: addressof.h  allocate_at_lesat.h  allocator.h  allocator_arg.h  allocator_traits.h  construct.h  construct_at.h  default_delete.h  destroy.h  destroy_at.h  pointer_traits.h  to_address.h  unique_ptr.h  uses_allocator.h
include/lsd/__new/: align_val_t.h  bad_alloc.h  bad_array_new_length.h
include/lsd/__optional/: bad_optional_access.h  forward_declare.h  hash.h  nullopt_t.h  optional.h  swap.h
include/lsd/__ranges/: __forward_declare.h  as_const_pointer.h  begin.h  bidirectional_range.h  borrowed_iterator_t.h  borrowed_range.h  borrowed_subrange_t.h  cbegin.h  cdata.h  cend.h  common_range.h  const_iterator_t.h  const_sentinel_t.h  constant_range.h  contiguous_range.h  crbegin.h  crend.h  dangling.h  data.h  disabled_sized_range.h  distance.h  empty.h  enable_borrowed_range.h  enable_view.h  end.h  forward_range.h  from_range.h  input_range.h  iterator_t.h  movable_box.h  non_propagating_cache.h  output_range.h  owning_view.h  possibly_const_range.h  random_access_range.h  range.h  range_adaptor.h  range_adaptor_closure.h  range_const_reference_t.h  range_difference_t.h  (+21 more)
include/lsd/__span/: __forward_declare.h  as_bytes.h  dynamic_extent.h  span.h
include/lsd/__stdexcept/: domain_error.h  invalid_argument.h  length_error.h  logic_error.h  out_of_range.h  overflow_error.h  range_error.h  runtime_error.h  underflow_error.h
include/lsd/__string/: char_traits.h
include/lsd/__tuple/: apply.h  forward_declare.h  make_from_tuple.h  tuple_element.h  tuple_fold.h  tuple_for_each.h  tuple_like.h  tuple_size.h  tuple_transform.h
include/lsd/__type_traits/: add_lvalue_reference.h  add_rvalue_reference.h  arity.h  bool_constant.h  common_reference.h  meta.h  (+37 more)
ss/test/: CMakeLists.txt  concepts_test.cc  functional_test.cc  memory_test.cc  optional_test.cc  ranges_test.cc  ss_test.cc  ss_test.h  test_utils.h  type_traits_test.cc  utility_test.cc
ss/test/optional/: CMakeLists.txt  test.cc
ss/test/type_traits/: CMakeLists.txt  test.cc
ss/test/utility/: CMakeLists.txt
status/: algorithm.md  any.md  array.md  atomic.md  barrier.md  bit.md  bitset.md  charconv.md  chrono.md  compare.md  complex.md  concepts.md  condition_variable.md  deque.md  exception.md  execution.md  expected.md  filesystem.md  flat_map.md  flat_set.md  format.md  forward_list.md  fstream.md  functional.md  future.md  generator.md  initializer_list.md  iomanip.md  ios.md  iosfwd.md  iostream.md  istream.md  iterator.md  latch.md  limits.md  list.md  locale.md  map.md  mdspan.md  memory.md  (+39 more)
test/: CMakeLists.txt  algorithm_test.cc  array_test.cc  bitset_test.cc  concepts_test.cc  functional_test.cc  iterator_test.cc  limits_test.cc  lsd_test.h  memory_test.cc  optional_test.cc  ranges_test.cc  ss_test.h  test_utils.h  tuple_test.cc  type_traits_test.cc  utility_test.cc  vector_test.cc
tools/generate_doc/: CMakeLists.txt  curlpp.cpp  curlpp.hpp  make_doc.cc
(+218 files in other folders)
