
if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
endif()

message("============================================================"  )
message("IS APPLE                   : ${APPLE}"                         )
message("IS IOS                     : ${IOS}"                           )
message("IS ANDROID                 : ${ANDROID}"                       )
message("IS UNIX OR LINUX           : ${UNIX}"                          )
message("IS WIN32                   : ${WIN32}"                         )
message("IS MSVC                    : ${MSVC}"                          )
message("IS MSYS                    : ${MSYS}"                          )
message("IS MINGW                   : ${MINGW}"                         )
message("============================================================"  )
message("timestamp                  : ${timestamp}"                     )
message("CMAKE_SYSTEM_NAME          : ${CMAKE_SYSTEM_NAME}"             )
message("CURRENT_SYSTEM_NAME        : ${CURRENT_SYSTEM_NAME}"           )
message("CMAKE_CXX_STANDARD         : ${CMAKE_CXX_STANDARD}"            )
message("CMAKE_CXX_COMPILER_ID      : ${CMAKE_CXX_COMPILER_ID}"         )
message("CMAKE_CXX_COMPILER_VERSION : ${CMAKE_CXX_COMPILER_VERSION}"    )
message("CMAKE_CXX_COMPILER         : ${CMAKE_CXX_COMPILER}"            )
message("CMAKE_CXX_FLAGS            : ${CMAKE_CXX_FLAGS}"               )
message("============================================================\n")

add_subdirectory(optional)
add_subdirectory(type_traits)
add_subdirectory(utility)
